--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body style="background-color: rgb(119, 119, 116)">
     <h1>Practic of JavaScript</h1>
-    <script src="./js/arrive.js" type="module"></script>
+    <!-- <script src="./js/arrive.js" type="module"></script> -->
+    <script src="./js/arrive-2.js" type="module"></script>
   </body>
 </html>
