Подключает скрипты в index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>JavaScript TEST</title>
   </head>
-  <body style="background-color: rgb(119, 119, 116)">
+  <body>
     <h1>Practic of JavaScript</h1>
-    <!-- <script src="./js/arrive.js" type="module"></script> -->
-    <script src="./js/arrive-2.js" type="module"></script>
+
+    <label>
+      Ввести число
+      <input type="number" class="form-control js-value" />
+    </label>
+    <button type="button" class="btn btn-primary js-add-value">
+      Добавить в массив
+    </button>
+    <button type="button" class="btn btn-success js-calculate">
+      Посчитать сумму
+    </button>
+
+    <p>
+      Задача 6 Напишите программу, где пользователь вводит 3 числа, после ввода
+      всех трех чисел ему на экране отображается наибольшее из них.
+      Дополнительно проверяйте, является ли введенное пользователем вообще
+      числом
+    </p>
+    <!-- <script src="./js/arrive-for.js" type="module"></script> -->
+    <!-- <script src="./js/arrive-break-continue.js" type="module"></script> -->
+    <!-- <script src="./js/arrive-push.js" type="module"></script> -->
+    <!-- <script src="./js/arrive-split-join.js" type="module"></script> -->
+    <script src="./js/arrive-slice-splice.js" type="module"></script>
   </body>
 </html>
