Добавляет задачи и решения практических задач

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       Дополнительно проверяйте, является ли введенное пользователем вообще
       числом
     </p>
-    <!-- <script src="./js/arrive-for.js" type="module"></script> -->
-    <!-- <script src="./js/arrive-break-continue.js" type="module"></script> -->
-    <!-- <script src="./js/arrive-push.js" type="module"></script> -->
-    <!-- <script src="./js/arrive-split-join.js" type="module"></script> -->
-    <script src="./js/arrive-slice-splice.js" type="module"></script>
+    <!-- <script src="./js/arrive/arrive-for.js" type="module"></script> -->
+    <!-- <script src="./js/arrive/arrive-break-continue.js" type="module"></script> -->
+    <!-- <script src="./js/arrive/arrive-push.js" type="module"></script> -->
+    <!-- <script src="./js/arrive/arrive-split-join.js" type="module"></script> -->
+    <!-- <script src="./js/arrive/arrive-slice-splice.js" type="module"></script> -->
+    <script src="./js/arrive/practic.js" type="module"></script>
   </body>
 </html>
