--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- <script src="./js/arrive/arrive-push.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-split-join.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-slice-splice.js" type="module"></script> -->
-    <script src="./js/arrive/practic.js" type="module"></script>
+    <!-- <script src="./js/arrive/practic.js" type="module"></script> -->
+    <!-- <script src="./js/arrive/test.js" type="module"></script> -->
   </body>
 </html>
