--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
   </head>
   <body>
     <h1>Practic of JavaScript</h1>
+<!-- Counter -->
+    <!-- <button id='decrement'>-</button>
+    <p id='count'></p>
+    <button id='increment'>+</button> -->
 
-    <label>
+<!-- Calc -->
+<p>Первое число:<span id = 'first-num'></span></p>
+<p>Второе число:<span id ='second-num'></span></p>
+<button id = 'plus'>+</button>
+<button id='minus'>-</button>
+<button id='mult'>*</button>
+<button id='share'>/</button>
+<p>Результат: <span id ='result'></span></p>
+
+    <!-- <label>
       Ввести число
       <input type="number" class="form-control js-value" />
     </label>
@@ -18,14 +31,7 @@
     </button>
     <button type="button" class="btn btn-success js-calculate">
       Посчитать сумму
-    </button>
-
-    <p>
-      Задача 6 Напишите программу, где пользователь вводит 3 числа, после ввода
-      всех трех чисел ему на экране отображается наибольшее из них.
-      Дополнительно проверяйте, является ли введенное пользователем вообще
-      числом
-    </p>
+    </button> -->
     <!-- <script src="./js/arrive/arrive-for.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-break-continue.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-push.js" type="module"></script> -->
@@ -33,5 +39,8 @@
     <!-- <script src="./js/arrive/arrive-slice-splice.js" type="module"></script> -->
     <!-- <script src="./js/arrive/practic.js" type="module"></script> -->
     <!-- <script src="./js/arrive/test.js" type="module"></script> -->
+   <!-- <script src="./js/arrive/tasks/task-sting.js" type="module"></script> -->
+  <script src="./js/arrive/tasks/task-practic.js" type="module"></script>
+    <!-- <script src="./js/arrive/object/practic-test.js" type="module"></script> -->
   </body>
 </html>
