--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   </head>
   <body>
     <h1>Practic of JavaScript</h1>
-<!-- Counter -->
+    <!-- Counter -->
     <!-- <button id='decrement'>-</button>
     <p id='count'></p>
     <button id='increment'>+</button> -->
 
-<!-- Calc -->
-<p>Первое число:<span id = 'first-num'></span></p>
-<p>Второе число:<span id ='second-num'></span></p>
-<button id = 'plus'>+</button>
-<button id='minus'>-</button>
-<button id='mult'>*</button>
-<button id='share'>/</button>
-<p>Результат: <span id ='result'></span></p>
+    <!-- Calc -->
+    <!-- <p>Первое число:<span id="first-num"></span></p>
+    <p>Второе число:<span id="second-num"></span></p>
+    <button id="plus">+</button>
+    <button id="minus">-</button>
+    <button id="mult">*</button>
+    <button id="share">/</button>
+    <p>Результат: <span id="result"></span></p> -->
 
     <!-- <label>
       Ввести число
@@ -32,6 +32,52 @@
     <button type="button" class="btn btn-success js-calculate">
       Посчитать сумму
     </button> -->
+
+    <div class="insertElem">
+      <!-- ВСТАВЛЯТЬ СЮДА -->
+    </div>
+    <template>
+      <article>
+        <h2></h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+          aspernatur doloremque earum unde nisi voluptates beatae et, aperiam ad
+          harum.
+        </p>
+        <div>
+          <ul>
+            <li>
+              <a href=""><img src="#" alt="" /></a>
+            </li>
+            <li>
+              <a href=""><img src="#" alt="" /></a>
+            </li>
+            <li>
+              <a href=""><img src="#" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+        <p>Sandra <span>11.11.2020</span></p>
+        <input type="checbox" />
+      </article>
+    </template>
+
+    <template>
+      <form>
+        <h2></h2>
+        <p></p>
+        <label></label>
+        <input />
+        <label></label>
+        <input />
+        <label></label>
+        <input />
+        <label></label>
+        <textarea></textarea>
+        <input type="submit" />
+      </form>
+    </template>
+
     <!-- <script src="./js/arrive/arrive-for.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-break-continue.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-push.js" type="module"></script> -->
@@ -39,8 +85,9 @@
     <!-- <script src="./js/arrive/arrive-slice-splice.js" type="module"></script> -->
     <!-- <script src="./js/arrive/practic.js" type="module"></script> -->
     <!-- <script src="./js/arrive/test.js" type="module"></script> -->
-   <!-- <script src="./js/arrive/tasks/task-sting.js" type="module"></script> -->
-  <script src="./js/arrive/tasks/task-practic.js" type="module"></script>
+    <!-- <script src="./js/arrive/tasks/task-sting.js" type="module"></script> -->
+    <!-- <script src="./js/arrive/tasks/task-practic.js" type="module"></script> -->
+    <script src="./js/dom.js" type="module"></script>
     <!-- <script src="./js/arrive/object/practic-test.js" type="module"></script> -->
   </body>
 </html>
