--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </form>
     </template>
 
-    <!-- <script src="./js/arrive/arrive-for.js" type="module"></script> -->
+    <script src="./js/arrive/arrive-for.js" type="module"></script>
     <!-- <script src="./js/arrive/arrive-break-continue.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-push.js" type="module"></script> -->
     <!-- <script src="./js/arrive/arrive-split-join.js" type="module"></script> -->
@@ -87,7 +87,7 @@
     <!-- <script src="./js/arrive/test.js" type="module"></script> -->
     <!-- <script src="./js/arrive/tasks/task-sting.js" type="module"></script> -->
     <!-- <script src="./js/arrive/tasks/task-practic.js" type="module"></script> -->
-    <script src="./js/dom.js" type="module"></script>
+    <!-- <script src="./js/dom.js" type="module"></script> -->
     <!-- <script src="./js/arrive/object/practic-test.js" type="module"></script> -->
   </body>
 </html>
